# catam-minimisation

./: .gitignore  1.txt  SteepDescent.py  coursework.ipynb  functions.py  minimise.py  pyproject.toml  report_template.tex  review.md
minimise/: __init__.py  algorithms.py  functions.py  line_search.py  problems.py  reporting.py  runner.py
